the_project/web-server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: web-server
          image: web-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
