the_project/web-server/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server-svc
spec:
  type: NodePort
  selector:
    app: web-server
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 8000
