the_project/web-server/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-server-ing
spec:
  rules:
  - http:
      paths:
      - path: /web-server
        pathType: Prefix
        backend:
          service:
            name: web-server-svc
            port:
              number: 2345
